--- a/index.html
+++ b/index.html
@@ -1,181 +1,39 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Te Amo Muchote ♥</title>
-  <style>
-    body, html {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      overflow: hidden;
-      background: #000;
-      font-family: 'Segoe UI', sans-serif;
-      color: #fff;
-    }
-    canvas {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-    }
-    .container {
-      position: relative;
-      width: 100%;
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      z-index: 10;
-    }
-    .sphere {
-      position: relative;
-      width: 180px;
-      height: 180px;
-      border-radius: 50%;
-      background: radial-gradient(circle at 30% 30%, #000, #111, #000);
-      box-shadow: 0 0 80px rgba(255, 255, 255, 0.3);
-      animation: float 12s infinite ease-in-out;
-    }
-    @keyframes float {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-40px); }
-    }
-    .love-text {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      font-size: 2.8em;
-      color: #fff;
-      text-shadow: 0 0 30px #ff69b4, 0 0 60px #ff1493;
-      pointer-events: none;
-      text-align: center;
-      line-height: 1.2;
-    }
-    .player {
-      position: fixed;
-      bottom: 30px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: rgba(255, 105, 180, 0.3);
-      padding: 15px 35px;
-      border-radius: 50px;
-      backdrop-filter: blur(15px);
-      box-shadow: 0 0 30px rgba(255, 105, 180, 0.6);
-      z-index: 100;
-      border: 1px solid rgba(255, 255, 255, 0.2);
-    }
-    button {
-      background: #ff69b4;
-      border: none;
-      color: white;
-      padding: 14px 30px;
-      border-radius: 40px;
-      font-size: 1.3em;
-      cursor: pointer;
-      box-shadow: 0 0 20px #ff1493;
-    }
-    button:hover { background: #ff1493; transform: scale(1.05); }
-  </style>
-</head>
-<body>
-  <canvas id="canvas"></canvas>
+<meta charset="UTF-8">
+<title>Para Ti 💜</title>
 
-  <div class="container">
-    <div class="sphere">
-      <div class="love-text">Te Amo Muchote<br>Mis Ojitos Brillantes ♥</div>
-    </div>
-    
-    <div class="player">
-      <button id="playBtn">▶ Reproducir Piel Canela</button>
-      <audio id="song" loop>
-        <source src="cancion.mp3" type="audio/mpeg">
-      </audio>
-    </div>
-  </div>
+<style>
+body {
+    margin: 0;
+    overflow: hidden;
+    background: radial-gradient(circle at center, #6a0dad, #1a0026);
+    font-family: Arial, sans-serif;
+    color: white;
+}
 
-  <script>
-    // Partículas más densas y explosivas como el original
-    const canvas = document.getElementById('canvas');
-    const ctx = canvas.getContext('2d');
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight;
+canvas {
+    position: fixed;
+    top: 0;
+    left: 0;
+}
 
-    window.addEventListener('resize', () => {
-      canvas.width = window.innerWidth;
-      canvas.height = window.innerHeight;
-    });
+.mensaje {
+    position: absolute;
+    top: 20px;
+    width: 100%;
+    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+}
 
-    let particles = [];
-    class Particle {
-      constructor(x, y) {
-        this.x = x;
-        this.y = y;
-        this.size = Math.random() * 2 + 1;
-        this.speedX = Math.random() * 3 - 1.5;
-        this.speedY = Math.random() * 3 - 1.5;
-        this.color = `hsl(${Math.random() * 60 + 280}, 100%, 70%)`; // tonos morados/rosa
-      }
-      update() {
-        this.x += this.speedX;
-        this.y += this.speedY;
-        if (this.size > 0.2) this.size -= 0.05;
-      }
-      draw() {
-        ctx.fillStyle = this.color;
-        ctx.beginPath();
-        ctx.arc(this.x, this.y, this.size, 0, Math.PI * 2);
-        ctx.fill();
-      }
-    }
+.controls {
+    position: fixed;
+    bottom: 20px;
+    width: 100%;
+    text-align: center;
+}
 
-    function initParticles() {
-      particles = [];
-      for (let i = 0; i < 300; i++) { // más partículas para densidad
-        const angle = Math.random() * Math.PI * 2;
-        const radius = Math.random() * 80 + 50;
-        const x = canvas.width / 2 + Math.cos(angle) * radius;
-        const y = canvas.height / 2 + Math.sin(angle) * radius;
-        particles.push(new Particle(x, y));
-      }
-    }
-
-    function animate() {
-      ctx.fillStyle = 'rgba(0,0,0,0.05)';
-      ctx.fillRect(0, 0, canvas.width, canvas.height);
-      particles.forEach((p, i) => {
-        p.update();
-        p.draw();
-        if (p.size <= 0.2) {
-          particles.splice(i, 1);
-        }
-      });
-      if (particles.length < 300) {
-        initParticles(); // regenera partículas para efecto continuo
-      }
-      requestAnimationFrame(animate);
-    }
-
-    initParticles();
-    animate();
-
-    // Reproductor
-    const audio = document.getElementById('song');
-    const playBtn = document.getElementById('playBtn');
-
-    playBtn.addEventListener('click', () => {
-      if (audio.paused) {
-        audio.play();
-        playBtn.textContent = '⏸ Pausar';
-      } else {
-        audio.pause();
-        playBtn.textContent = '▶ Reproducir Piel Canela';
-      }
-    });
-  </script>
-</body>
-</html>
+button {
+    padding: 10px
