--- a/index.html
+++ b/index.html
@@ -5,57 +5,63 @@
 <title>Para Ti 💜</title>
 
 <style>
-body {
-    margin: 0;
-    overflow: hidden;
-    background: radial-gradient(circle at center, #6a0dad, #1a0026);
-    font-family: Arial, sans-serif;
-    color: white;
+body{
+    margin:0;
+    overflow:hidden;
+    font-family:Arial, sans-serif;
+    background: radial-gradient(circle at center, #6a00ff, #140021);
+    color:white;
 }
 
-canvas {
-    position: fixed;
-    top: 0;
-    left: 0;
+#mensaje{
+    position:absolute;
+    top:20px;
+    width:100%;
+    text-align:center;
+    font-size:22px;
+    background:rgba(255,255,255,0.1);
+    padding:10px;
+    border-radius:20px;
+    width:fit-content;
+    left:50%;
+    transform:translateX(-50%);
 }
 
-.mensaje {
-    position: absolute;
-    top: 20px;
-    width: 100%;
-    text-align: center;
-    font-size: 24px;
-    font-weight: bold;
+canvas{
+    position:fixed;
+    top:0;
+    left:0;
 }
 
-.controls {
-    position: fixed;
-    bottom: 20px;
-    width: 100%;
-    text-align: center;
+#controls{
+    position:absolute;
+    bottom:20px;
+    width:100%;
+    text-align:center;
 }
 
-button {
-    padding: 10px 20px;
-    border: none;
-    border-radius: 10px;
-    background: #ffffff33;
-    color: white;
-    font-size: 16px;
-    cursor: pointer;
+button{
+    padding:12px 20px;
+    border:none;
+    border-radius:12px;
+    background:rgba(255,255,255,0.2);
+    color:white;
+    font-size:16px;
+    cursor:pointer;
 }
 </style>
 </head>
 
 <body>
 
-<div class="mensaje">Te Amo Muchote Mis Ojitos Brillantes 💛</div>
+<div id="mensaje">Te Amo Muchote Mis Ojitos Brillantes 💛</div>
 
 <canvas id="canvas"></canvas>
 
-<div class="controls">
-    <audio id="music" src="cancion.mp3"></audio>
-    <button onclick="playMusic()">▶ Reproducir Música</button>
+<div id="controls">
+    <input type="file" id="file" accept="audio/*" hidden>
+    <audio id="audio"></audio>
+    <button onclick="document.getElementById('file').click()">Elegir canción 🎵</button>
 </div>
 
 <script>
@@ -66,42 +72,95 @@ canvas.width = window.innerWidth;
 canvas.height = window.innerHeight;
 
 let particles = [];
+let words = [
+"Te Amo","Mi Reina","Hermosa","Mi Todo","Única",
+"Mi Amor","Perla","Mi Bebé","Mi Cielo","Preciosa",
+"Mi Canción Favorita","Mi Vida","Ojitos Bonitos"
+];
 
-for (let i = 0; i < 200; i++) {
+// partículas nieve
+for(let i=0;i<300;i++){
     particles.push({
-        x: Math.random() * canvas.width,
-        y: Math.random() * canvas.height,
-        size: Math.random() * 3,
-        speed: Math.random() * 1
+        x:Math.random()*canvas.width,
+        y:Math.random()*canvas.height,
+        size:Math.random()*3,
+        speed:Math.random()*1+0.5
     });
 }
 
-function animate() {
-    ctx.clearRect(0, 0, canvas.width, canvas.height);
+// palabras flotando
+let floatingWords=[];
+for(let i=0;i<40;i++){
+    floatingWords.push({
+        text: words[Math.floor(Math.random()*words.length)],
+        x: Math.random()*canvas.width,
+        y: Math.random()*canvas.height,
+        speed: Math.random()*0.3+0.1
+    });
+}
 
-    ctx.fillStyle = "white";
+function drawSphere(){
+    let x = canvas.width/2;
+    let y = canvas.height/2;
 
-    particles.forEach(p => {
+    let gradient = ctx.createRadialGradient(x,y,10,x,y,80);
+    gradient.addColorStop(0,"#ffffff");
+    gradient.addColorStop(1,"#000000");
+
+    ctx.fillStyle = gradient;
+    ctx.beginPath();
+    ctx.arc(x,y,60,0,Math.PI*2);
+    ctx.fill();
+}
+
+function animate(){
+    ctx.clearRect(0,0,canvas.width,canvas.height);
+
+    // nieve
+    ctx.fillStyle="white";
+    particles.forEach(p=>{
         ctx.beginPath();
-        ctx.arc(p.x, p.y, p.size, 0, Math.PI * 2);
+        ctx.arc(p.x,p.y,p.size,0,Math.PI*2);
         ctx.fill();
 
-        p.y += p.speed;
-
-        if (p.y > canvas.height) {
-            p.y = 0;
-            p.x = Math.random() * canvas.width;
+        p.y+=p.speed;
+        if(p.y>canvas.height){
+            p.y=0;
+            p.x=Math.random()*canvas.width;
         }
     });
+
+    // palabras
+    ctx.fillStyle="rgba(255,255,255,0.8)";
+    ctx.font="14px Arial";
+
+    floatingWords.forEach(w=>{
+        ctx.fillText(w.text,w.x,w.y);
+        w.y+=w.speed;
+        if(w.y>canvas.height){
+            w.y=0;
+            w.x=Math.random()*canvas.width;
+        }
+    });
+
+    drawSphere();
 
     requestAnimationFrame(animate);
 }
 
 animate();
 
-function playMusic() {
-    document.getElementById("music").play();
-}
+// musica
+const fileInput = document.getElementById("file");
+const audio = document.getElementById("audio");
+
+fileInput.addEventListener("change", e=>{
+    const file = e.target.files[0];
+    if(file){
+        audio.src = URL.createObjectURL(file);
+        audio.play();
+    }
+});
 </script>
 
 </body>
