--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ button{
 
 <div id="controls">
 <input type="file" id="file" accept="audio/*" hidden>
-<audio id="audio"></audio>
+<audio id="audio" src="cancion.mp3" autoplay loop></audio>
 <button onclick="document.getElementById('file').click()">Elegir canción 🎵</button>
 </div>
 
