--- a/index.html
+++ b/index.html
@@ -1,181 +1,135 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Para Ti 💜</title>
-
-<style>
-body{
-    margin:0;
-    overflow:hidden;
-    font-family:Arial, sans-serif;
-    background:black;
-}
-
-#mensaje{
-    position:absolute;
-    top:20px;
-    left:50%;
-    transform:translateX(-50%);
-    background:rgba(255,255,255,0.15);
-    padding:10px 20px;
-    border-radius:20px;
-    color:white;
-}
-
-canvas{
-    position:fixed;
-    top:0;
-    left:0;
-}
-
-#controls{
-    position:absolute;
-    bottom:20px;
-    width:100%;
-    text-align:center;
-}
-
-button{
-    padding:10px 20px;
-    border:none;
-    border-radius:12px;
-    background:rgba(255,255,255,0.2);
-    color:white;
-    font-size:16px;
-}
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Estrellas y Piel Canela</title>
+  <style>
+    body { margin: 0; overflow: hidden; background: #000; font-family: Arial, sans-serif; }
+    #overlay {
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      color: white;
+      font-size: 24px;
+      text-shadow: 0 0 10px #f0f, 0 0 20px #f0f;
+      pointer-events: none;
+      z-index: 10;
+    }
+    #controls {
+      position: absolute;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      color: white;
+      background: rgba(0,0,0,0.5);
+      padding: 10px 20px;
+      border-radius: 20px;
+      z-index: 10;
+    }
+  </style>
 </head>
-
 <body>
 
-<div id="mensaje">Te Amo Muchote Mis Ojitos Brillantes 💛</div>
+  <div id="overlay">Te Amo Muchote Mis Ojitos Brillantes ♥</div>
+  <div id="controls">Rueda del mouse → zoom | Arrastra → girar</div>
 
-<canvas id="canvas"></canvas>
+  <audio id="musica" loop>
+    <source src="canción.mp3" type="audio/mpeg">
+    Tu navegador no soporta audio.
+  </audio>
 
-<div id="controls">
-<input type="file" id="file" accept="audio/*" hidden>
-<audio id="audio" src="cancion.mp3" autoplay loop></audio>
-<button onclick="document.getElementById('file').click()">Elegir canción 🎵</button>
-</div>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.168.0/build/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.168.0/examples/js/controls/OrbitControls.min.js"></script>
 
-<script>
-const canvas = document.getElementById("canvas");
-const ctx = canvas.getContext("2d");
+  <script>
+    // Escena, cámara y renderizador
+    const scene = new THREE.Scene();
+    scene.background = new THREE.Color(0x0a0015); // morado oscuro
 
-function resize(){
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight;
-}
-resize();
-window.addEventListener("resize", resize);
+    const camera = new THREE.PerspectiveCamera(60, window.innerWidth / window.innerHeight, 0.1, 2000);
+    camera.position.set(0, 0, 80);
 
-let particles=[];
-let words=["Te Amo","Mi Reina","Hermosa","Mi Todo","Única","Mi Amor","Perla","Mi Bebé"];
+    const renderer = new THREE.WebGLRenderer({ antialias: true });
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    renderer.setPixelRatio(window.devicePixelRatio);
+    document.body.appendChild(renderer.domElement);
 
-for(let i=0;i<250;i++){
-    particles.push({
-        x:Math.random()*canvas.width,
-        y:Math.random()*canvas.height,
-        size:Math.random()*3,
-        speed:Math.random()*1+0.5
-    });
-}
+    // Controles de órbita (arrastrar + zoom rueda)
+    const controls = new THREE.OrbitControls(camera, renderer.domElement);
+    controls.enableDamping = true;
+    controls.dampingFactor = 0.05;
+    controls.minDistance = 10;
+    controls.maxDistance = 300;
+    controls.rotateSpeed = 0.6;
+    controls.zoomSpeed = 1.2;
 
-let floatingWords=[];
-for(let i=0;i<40;i++){
-    floatingWords.push({
-        text:words[Math.floor(Math.random()*words.length)],
-        x:Math.random()*canvas.width,
-        y:Math.random()*canvas.height,
-        speed:Math.random()*0.4+0.2
-    });
-}
+    // Estrellas (partículas)
+    const starsGeometry = new THREE.BufferGeometry();
+    const starsCount = 8000;
+    const posArray = new Float32Array(starsCount * 3);
 
-function drawBackground(){
-    let gradient = ctx.createRadialGradient(
-        canvas.width/2,
-        canvas.height/2,
-        100,
-        canvas.width/2,
-        canvas.height/2,
-        canvas.width
-    );
-    gradient.addColorStop(0,"#6a00ff");
-    gradient.addColorStop(1,"#140021");
-
-    ctx.fillStyle = gradient;
-    ctx.fillRect(0,0,canvas.width,canvas.height);
-}
-
-function drawSphere(){
-    let x=canvas.width/2;
-    let y=canvas.height/2;
-
-    let gradient=ctx.createRadialGradient(x,y,10,x,y,80);
-    gradient.addColorStop(0,"#ffffff");
-    gradient.addColorStop(1,"#000000");
-
-    ctx.fillStyle=gradient;
-    ctx.beginPath();
-    ctx.arc(x,y,60,0,Math.PI*2);
-    ctx.fill();
-}
-
-function animate(){
-    drawBackground();
-
-    ctx.fillStyle="white";
-
-    particles.forEach(p=>{
-        ctx.beginPath();
-        ctx.arc(p.x,p.y,p.size,0,Math.PI*2);
-        ctx.fill();
-
-        p.y+=p.speed;
-        if(p.y>canvas.height){
-            p.y=0;
-            p.x=Math.random()*canvas.width;
-        }
-    });
-
-    ctx.fillStyle="rgba(255,255,255,0.8)";
-    ctx.font="14px Arial";
-
-    floatingWords.forEach(w=>{
-        ctx.fillText(w.text,w.x,w.y);
-        w.y+=w.speed;
-        if(w.y>canvas.height){
-            w.y=0;
-            w.x=Math.random()*canvas.width;
-        }
-    });
-
-    drawSphere();
-
-    requestAnimationFrame(animate);
-}
-
-animate();
-
-// música
-const fileInput=document.getElementById("file");
-const audio=document.getElementById("audio");
-
-fileInput.addEventListener("change",e=>{
-    const file=e.target.files[0];
-    if(file){
-        audio.src=URL.createObjectURL(file);
-        audio.play();
+    for(let i = 0; i < starsCount * 3; i++) {
+      posArray[i] = (Math.random() - 0.5) * 1200;
     }
-});
-<script>
-document.body.addEventListener("click", () => {
-    const audio = document.getElementById("audio");
-    audio.play();
-}, { once: true });
-</script>
 
+    starsGeometry.setAttribute('position', new THREE.BufferAttribute(posArray, 3));
+
+    const starsMaterial = new THREE.PointsMaterial({
+      size: 1.2,
+      color: 0xffffff,
+      sizeAttenuation: true,
+      transparent: true,
+      opacity: 0.9,
+      blending: THREE.AdditiveBlending
+    });
+
+    const starField = new THREE.Points(starsGeometry, starsMaterial);
+    scene.add(starField);
+
+    // Esfera central (planeta / bola)
+    const sphereGeometry = new THREE.SphereGeometry(12, 32, 32);
+    const sphereMaterial = new THREE.MeshBasicMaterial({
+      color: 0x6a1b9a,          // morado
+      transparent: true,
+      opacity: 0.85
+    });
+    const sphere = new THREE.Mesh(sphereGeometry, sphereMaterial);
+    scene.add(sphere);
+
+    // Luz suave (para que se vea bonito aunque sea basic material)
+    const ambientLight = new THREE.AmbientLight(0xffffff, 0.4);
+    scene.add(ambientLight);
+
+    // Reproducción automática de música (con interacción por políticas de navegador)
+    const audio = document.getElementById('musica');
+    audio.volume = 0.6;
+
+    // Intenta reproducir al cargar (muchos navegadores requieren interacción primero)
+    document.body.addEventListener('click', () => {
+      audio.play().catch(e => console.log("Click para reproducir música"));
+    }, { once: true });
+
+    // Animación
+    function animate() {
+      requestAnimationFrame(animate);
+
+      // Rotación suave de la esfera y estrellas
+      sphere.rotation.y += 0.0008;
+      starField.rotation.y += 0.00015;
+
+      controls.update();
+      renderer.render(scene, camera);
+    }
+
+    animate();
+
+    // Responsive
+    window.addEventListener('resize', () => {
+      camera.aspect = window.innerWidth / window.innerHeight;
+      camera.updateProjectionMatrix();
+      renderer.setSize(window.innerWidth, window.innerHeight);
+    });
+  </script>
 </body>
 </html>
